--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,7 +1,7 @@
 /* styles.css */
 div {
-    background: red;
-    text: white;
+    background-color: red;
+    color: white;
     font-size: 32px;
     text-align: center;
     font-weight: bold;
