--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,17 +1,18 @@
-.one,
-.three {
+.one {
     background-color: rgb(255, 192, 203);
-    font-family: Verdana, DejaVu Sans, sans-serif
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
 #two {
     color: rgb(0, 0, 255);
+    font-size: 36px;
+}
+
+.phont {
     font-size: 24px;
 }
-.three {
-    font-size: 24px;
-}
+
 #four {
-    background-color: rgb(0, 255, 0);
-    font-size: 24px;
+    background-color: lightgreen;
     font-weight: bold;
 }
