--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,28 +5,29 @@ body {
 
 .card {
   width: 400px;
-  background: #ffffff;
+  background: #fff;
   margin: 16px auto;
   padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
-  margin: 0px 0px;
+  margin-bottom: 8px;
+  margin-top: 0px;
   font-size: 16px;
   padding: 8px;
 }
 
-.content {
+.content {  
   background: #e3f4ff;
-  margin: 8px 0px;
+  margin-bottom: 8px;
   padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
-  padding: 8px;
   text-align: center;
+  padding: 8px;
 }
 
 button {
