--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,19 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.plants {
+  display: flex;
+  justify-content: center;
+  margin-top: 32px;
+  gap: 52px;
+  flex-wrap: wrap; /* in the solution, this doesn't exist */
+}
+
+.barberry, .chili, .pepper, .saffron {
+  width: 200px; /* in solution, there is max-width */
+  text-align: center;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +23,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
