--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -5,7 +5,7 @@
   height: 300px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .box {
@@ -15,4 +15,5 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  align-self: center;
 }
