--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,19 +2,6 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-.plants {
-  display: flex;
-  justify-content: center;
-  margin-top: 32px;
-  gap: 52px;
-  flex-wrap: wrap; /* in the solution, this doesn't exist */
-}
-
-.barberry, .chili, .pepper, .saffron {
-  width: 200px; /* in solution, there is max-width */
-  text-align: center;
-}
-
 img {
   width: 100px;
   height: 100px;
@@ -23,7 +10,6 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
 }
 
 /* do not edit this footer */
@@ -37,4 +23,26 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.item {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.text {
+  text-align: center;
 }
