--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,6 +1,3 @@
-
-
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html, body {
@@ -18,37 +15,11 @@ body {
   justify-content: center;
 }
 
-.team {
-  display: flex;
-  justify-content: space-between;
-  margin: 5px 0px;
-}
-
-.header {
-  font-weight: bold;
-}
-
-.close-button {
-  align-self: flex-end;
-}
-
-.text {
-  margin: 5px 0;
-}
-
-.icon {
-  flex-shrink: 0;
-  align-self: flex-start;
-  margin: 10px;
-}
-
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  display: flex;
-  padding: 10px;
 }
 
 .icon {
@@ -95,4 +66,34 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.modal {
+  display: flex;
+  padding: 10px;
+}
+
+/* .container {
+  display: flex;
+  flex-direction: column;
+} */
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.icon {
+  flex-shrink: 0;
+  margin: 10px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.close-button {
+  align-self: flex-end;
 }
